# cuda-parallel-computing

./: LICENSE  README.md  StopWatch.h
Assignment04_startup/: Assignment04.cu  CMakeLists.txt  Viewspace_100.txt  VisualizePCD.py
Assignment04_startup/Models/: Armadillo_64.pcd  Dragon_128.pcd  Dragon_64.pcd
assignment_1/: vector_addition.cu  vector_addition_with_managed_malloc.cu
assignment_2/: vector_find_max.cu
assignment_3/: Assignment03.cu
include/: CudaTimer.h  StopWatch.h
tools/: check_specs.cu
